<resources>
    <string name="app_name">酷欧天气</string>
    <string name="url">http://guolin.tech/api/china/</string>
    <string name="weather_url">https://free-api.heweather.com/v5/weather?city=</string>
    <string name="weather_url_key">key=12693de64b2e406c91d98d98333cd89e</string>

    <string name="title_area">中国</string>
    <string name="progress_dialog_message">正在加载</string>
    <string name="false_for_data">加载失败</string>

    <string name="tem_or">/</string>

    <string name="aqi_qlty">空气</string>

    <string name="aqi_name">空气质量</string>
    <string name="aqi_zhi">空气质量指数</string>
    <string name="aqi_pollution">首要污染物</string>
    <string name="aqi_pm25">PM2.5</string>
    <string name="aqi">AQI</string>
    <string name="aqi_detail">空气质量详情</string>
    <string name="aqi_or">|</string>
    <string name="aqi_time">发布</string>

    <string name="aqi_context_name">发布</string>
    <string name="aqi_context_pm25">PM2.5</string>
    <string name="aqi_context_pm10">PM10</string>
    <string name="aqi_context_no2">NO₂</string>
    <string name="aqi_context_so2">SO₂</string>
    <string name="aqi_context_co">CO</string>
    <string name="aqi_context_o3">O₃</string>
    <string name="aqi_context_simple">单位：μg/m3(CO为mg/m3)</string>

    <string name="weather_place">中国环境监测总站</string>

    <string name="suggest">生活建议：</string>
    <string name="now_hum_name">相对湿度</string>
    <string name="suggest_travel">旅行建议：</string>
    <string name="suggest_car">驾车建议：</string>
    <string name="suggest_sport">运动建议：</string>
    <string name="suggest_dress">穿衣建议：</string>

    <string name="change_city">切换城市</string>
    <string name="slide_cancel">删除</string>
    <string name="change_place">检测到您在</string>
    <string name="is_change_place">,是否切换</string>
    <string name="place_manager">位置管理</string>
    <string name="place_manager_edit">编辑</string>
</resources>
