<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/aqi_content"
        android:textSize="18sp"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <GridLayout
        android:columnCount="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="14sp"
            android:textColor="@color/colorText"
            android:layout_marginLeft="15dp"
            android:text="@string/aqi_context_pm25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/aqi_content_pm25"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="14sp"
            android:text="@string/aqi_context_pm10"
            android:textColor="@color/colorText"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/aqi_content_pm10"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView

            android:textSize="14sp"
            android:textColor="@color/colorText"
            android:layout_marginLeft="15dp"
            android:text="@string/aqi_context_no2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/aqi_content_no2"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:text="@string/aqi_context_so2"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/aqi_content_so2"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="14sp"
            android:text="@string/aqi_context_co"
            android:textColor="@color/colorText"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/aqi_content_co"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="14sp"
            android:text="@string/aqi_context_o3"
            android:textColor="@color/colorText"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/aqi_content_o3"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </GridLayout>

    <TextView
        android:text="@string/aqi_context_simple"
        android:textSize="12sp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>