<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/aqi_weight_text"
            android:text="@string/aqi_name"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:textColor="@color/colorDarkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/aqi_line"
            android:text="@string/aqi_or"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/aqi_weight_text"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/aqi_weight"
            android:textSize="16sp"
            android:textColor="#8B8B7A"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/aqi_line"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/aqi_time"
            android:textSize="14sp"
            android:layout_margin="10dp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <TextView
        android:background="#DCDCDC"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.lxy.coolweather.util.CircleBar
                    android:id="@+id/aqi_text"
                    android:layout_gravity="center"
                    android:layout_width="130dp"
                    android:layout_height="130dp" />

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/aqi_zhi"
                    android:textSize="14sp"
                    android:textColor="@color/colorLightText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.lxy.coolweather.util.CircleBar
                    android:id="@+id/aqi_pm25_text"
                    android:layout_gravity="center"
                    android:layout_width="130dp"
                    android:layout_height="130dp" />

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/aqi_pm25"
                    android:textSize="14sp"
                    android:textColor="@color/colorLightText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:background="#DCDCDC"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:layout_margin="15dp"
        android:id="@+id/aqi_detail_text"
        android:text="@string/aqi_detail"
        android:layout_gravity="center"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>